Set up express server

--- a/index.html
+++ b/index.html
@@ -45,5 +45,6 @@
 <script src="app/app.module.js"></script>
 <script src="app/app.routes.js"></script>
 <script src="home/home.controller.js"></script>
+<script src="patterns/patterns.controller.js"></script>
 </body>
 </html>
