Added viewport meta-tag for mobile viewing

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head lang="en">
   <meta charset="UTF-8">
+  <meta name="viewport" 
+  content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
   <title>Patternize</title>
   <link rel="stylesheet" href="lib/css/bootstrap.min.css"/>
   <link rel="stylesheet" href="lib/fonts/opensans_regular_macroman/stylesheet.css"/>
